Fixed Settings button alignment

--- a/google-searchpage/styles/main.css
+++ b/google-searchpage/styles/main.css
@@ -142,7 +142,7 @@ a:link:hover {
 /* CATEGORY start */
 #category-container {
 	padding-left: 120px;
-	min-width: 1000px;
+	min-width: 880px;
 	border-bottom: 1px solid #ebebeb;
 }
 
